# soundpad-rs

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release-please.yml  rust.yml
bumblebee/: Cargo.toml
bumblebee/src/: index.html  main.rs  play.rs  web.rs
cache/: Cargo.toml
cache/src/: builder.rs  cache.rs  lib.rs  message.rs  pool.rs  sync.rs
client/: Cargo.toml
client/src/: SoundRemoteControl.java  client.rs  error.rs
client/src/client/: builder.rs  command.rs  connection.rs
soundpad-bumblebee/: CHANGELOG.md  Cargo.toml  README.md
soundpad-bumblebee/src/: index.html  main.rs  play.rs
soundpad-remote-client/: Cargo.toml  LICENSE
soundpad-remote-client/src/: SoundList.xml  client.rs  error.rs  lib.rs  response_code.rs  soundlist.rs
soundpad-remote-client/src/client/: builder.rs  command.rs  connection.rs  error.rs
soundpad-xml/: Cargo.toml
soundpad-xml/src/: SoundList.xml  lib.rs  parse_or.rs  soundlist.rs
