[workspace]
members = ["soundpad-remote-client", "soundpad-bumblebee", "soundpad-xml"]

[workspace.package]
name = "soundpad-rs"
edition = "2021"
version = "0.1.0"
authors = ["Bent Hillerkus"]
license = "MIT"
repository = "https://github.com/benthillerkus/soundpad-rs"
description = "Tools for interacting with Soundpad"

[workspace.dependencies]
tokio = "1.22.0"
tracing = "0.1.37"
tracing-error = "0.2.0"
color-eyre = "0.6.2"

[profile.dev.package.backtrace]
opt-level = 3
