[workspace]
members = ["client", "bumblebee", "xml", "cache"]

[workspace.package]
edition = "2021"
authors = ["Bent Hillerkus"]
license = "MIT"
repository = "https://github.com/benthillerkus/soundpad-rs"
description = "Tools for interacting with Soundpad"
readme = "README.md"

[workspace.dependencies]
color-eyre = "0.6.2"
thiserror = "1.0.37"
tokio = "1.23.0"
tracing = "0.1.37"
tracing-error = "0.2.0"

[profile.dev.package.backtrace]
opt-level = 3
