[package]
name = "soundpad-remote-client"
description = "A client for the Soundpad remote control interface"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
thiserror = { workspace = true }

soundpad-xml = { path = "../xml", version = "0.1.1" }
derivative = "2.2.0" # TODO Remove this and customize useage of the instrument macro instead
windows-sys = "0.42.0"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
