[package]
name = "soundpad-bumblebee"
version = "0.1.0"
edition = "2021"

[features]
console = ["dep:console-subscriber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
soundpad-remote-client = { path = "../soundpad-remote-client" }
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
console-subscriber = { version = "0.1.8", optional = true }
tracing-error = "0.2.0"
clap = { version = "4.0.29", features = ["derive"] }
