[package]
name = "soundpad-bumblebee"
description = "On-the-fly wordmixing through Soundpad"
categories = ["command-line-utilities", "multimedia::audio"]
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[[bin]]
name = "bumblebee"
path = "src/main.rs"

[features]
console = ["dep:console-subscriber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-error = { workspace = true }

soundpad-remote-client = { path = "../soundpad-remote-client", version = "0.2.0" }
clap = { version = "4.0.29", features = ["derive"] }
tracing-subscriber = "0.3.16"
console-subscriber = { version = "0.1.8", optional = true }

[package.metadata.workspaces]
independent = true
