[package]
name = "soundpad-bumblebee"
description = "On-the-fly wordmixing through Soundpad"
documentation = "https://github.com/benthillerkus/soundpad-rs/blob/main/soundpad-bumblebee/README.md"
categories = ["command-line-utilities", "multimedia::audio"]
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[[bin]]
name = "bumblebee"
path = "src/main.rs"

[features]
console = ["dep:console-subscriber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-error = { workspace = true }

soundpad-remote-client = { path = "../soundpad-remote-client", version = "0.2.0" }
clap = { version = "4.0.29", features = ["derive"] }
tracing-subscriber = "0.3.16"
console-subscriber = { version = "0.1.8", optional = true }
axum = "0.6.1"
serde = { version = "1.0.149", features = ["derive"] }

[package.metadata.workspaces]
independent = true
