[package]
name = "soundpad-remote-client"
description = "A client for the Soundpad remote control interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-error = { workspace = true }

soundpad-xml = { path = "../soundpad-xml", version = "0.1.0" }
thiserror = "1.0.37"
winapi = "0.3"
derivative = "2.2.0"
