[package]
name = "soundpad-xml"
version = "0.1.0"
edition = "2021"
authors = ["Bent Hillerkus"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.17", features = ["formatting"] }
serde-xml-rs = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }