[package]
name = "soundpad-xml"
description = "A library for deserializing Soundpad's XML files"
categories = ["parser-implementations"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.17", features = ["formatting"] }
serde-xml-rs = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
